Fixed issues #68 and #70, adding status column and top-aligning text in oil list.

--- a/web_client/app/styles/app.scss
+++ b/web_client/app/styles/app.scss
@@ -14,7 +14,6 @@ $nav-tabs-link-active-border-color: #adb5bd #adb5bd $body-bg;
 @import "spinner";
 @import "ember-toggle-ios";
 
-
 .table thead th {
     background-color: #17a2b8;
     padding: 5px 10px;
@@ -122,6 +121,10 @@ $nav-tabs-link-active-border-color: #adb5bd #adb5bd $body-bg;
 }
 .ember-power-select-multiple-option {
     font-weight: 500;
+}
+
+.lt-body {
+    vertical-align: text-top;
 }
 
 $ember-power-select-multiple-selection-background-color: #17a2b8;
